refactor: enhance null safety and streamline code in various services